# CURSO_CPP_SERVICIOS_30H

codigo/4_2_comunicaciones_grpc/ServidorGRPC/: servidor.cpp
codigo/base_datos/: base_datos.sln
codigo/base_datos/mysql/: main.cpp
codigo/base_datos/postgresql/: CategoriaRepositorio.cpp  CategoriaRepositorio.h  postgresql.cpp  postgresql.vcxproj  postgresql.vcxproj.filters
codigo/boots_asio/multicliente/: multicliente.cpp
codigo/crow/: crow.sln
codigo/crow/crow_CRUD_memoria/: CrowCRUD.cpp
codigo/crow/crow_base_datos/: CategoriaCrow.cpp  CategoriaCrow.h  crow_base_datos.vcxproj  crow_base_datos.vcxproj.filters  main.cpp
codigo/crow/crow_basico/: crow_basico.cpp
codigo/json/pedidojson/: Pedido.cpp  Pedido.h  Utilidades.cpp  pedidojson.cpp  pedidojson.vcxproj  pedidojson.vcxproj.filters
codigo/seguridad/: seguridad.sln
codigo/seguridad/crow_ssl_jwt/: crow_ssl_jwt.cpp
codigo/seguridad/ssl_crow/: ssl_crow.cpp  ssl_crow.vcxproj
codigo/solucion_docker/solucion_docker/: solucion_docker.sln
codigo/solucion_docker/solucion_docker/practica2_multistage/: CMakeLists.txt  Dockerfile  practica2_multistage.cpp
codigo/websockets/: websockets.sln
codigo/websockets/wscliente/: wscliente.cpp
codigo/websockets/wsservidor/: wsservidor.cpp
codigo_DIC_2025/bases_de_datos/: bases_de_datos.sln
codigo_DIC_2025/boost_beast/: boost_beast.sln
codigo_DIC_2025/comunicaciones_zmq/: comunicaciones_zmq.sln
codigo_DIC_2025/crow_json/: crow_json.sln
codigo_DIC_2025/hilos_punteros/: hilos_punteros.sln
codigo_DIC_2025/seguridad/: seguridad.sln
(+77 files in other folders)
